system/istio/gateway/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.tomekz.party"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
            # Allow attaching Routes from given namespaces
            - key: kubernetes.io/metadata.name
              operator: In
              values: [audiobookshelf]
